# basex-python

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml
src/basex/: __init__.py  _basex.pyx  _version.py  basex.py  constants.py  modes.py  presets.py
tests/: __init__.py  conftest.py  test_basex.py  test_fallback.py
